k8s/frontend/staging/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: staging

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
